--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <p><em>Shrek</em></p>
         <p><b>Shrek</b></p>
         <p><em><b>Shrek</b></em></p>
+        <!--wow! you looked into the code! congrats! this is not a virus web its just a shrek word and image page, you can look at the code here or on the github project: https://github.com/Opeten/shrek--> 
         
 
         <img src="assets/shrek1.jpeg" alt="shrek1">
