--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <p><b>Shrek</b></p>
         <p><em><b>Shrek</b></em></p>
         <!--wow! you looked into the code! congrats! this is not a virus web its just a shrek word and image page, you can look at the code here or on the github project: https://github.com/Opeten/shrek--> 
-        
+        <br>
+        <p>Hi Emma</p>
 
         <img src="assets/shrek1.jpeg" alt="shrek1">
         <img alt="shrek2" src="assets/shrek2.jpeg" >
