--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <a href="./index.html"><img src = "./img/icon.png" class = "icon"></a>
         <p>Shrek</p>
         <p>poopy scoopady</p>
         <p><em>Shrek</em></p>
