--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <body>
         <a href="https://opeten.opeten.org"><img src = "icon.png" class = "icon"></a>
         <p>Shrek</p>
-        <p>poopy scoopady</p>
+        <p>Shrek is buetiful</p>
         <p><em>Shrek</em></p>
         <p><b>Shrek</b></p>
         <p><em><b>Shrek</b></em></p>
         <!--wow! you looked into the code! congrats! this is not a virus web its just a shrek word and image page, you can look at the code here or on the github project: https://github.com/Opeten/shrek--> 
         <br>
-        <p>Hi Emma</p>
+        <p>Hello all that come here, from ST.P******* NS, yes i own this website</p>
 
         <img src="assets/shrek1.jpeg" alt="shrek1">
         <img alt="shrek2" src="assets/shrek2.jpeg" >
